# TPO-Embedserv

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt  uninstall.sh
embedserv/: cli.py  config.py  db.py  manager.py  models.py  schemas.py  server.py
